--- a/index.html
+++ b/index.html
@@ -10,24 +10,36 @@
     <script src="NodeTreeGeneration.js"></script>
     <script>
         iniWebPage();
-
         /**
          * Lay noi dung file json
          * @type type
          */
-        setTimeout(function () {
-            loadFile("jsonForMai2.json");
-            addFileContentToHtml();
-            var jsonObject = null;
-            var content = document.getElementById('main').innerHTML;
-            jsonObject = JSON.parse(content);
-            alert(jsonObject['name']);
-        }, 500);
+        loadFile("jsonForMai2.json");
+        addFileContentToHtml();
         setTimeout(function () {
             /**
              * Khoi tao cay Node
              * @type Array
              */
+            function traverse(jsonTmp, node) {
+                node.id = jsonTmp.name + ""; // fix code later
+                node.path = jsonTmp.name + "";
+                console.log(jsonTmp.name);
+                if (jsonTmp.children.length > 0)
+                for (var i = 0; i < jsonTmp.children.length; i++) {
+                    var child = new Node();
+                    node.children.push(child);
+                    traverse(jsonTmp.children[i], child);
+                }
+            }
+
+            var content = document.getElementById('main').innerHTML;
+            var jsonTmp = JSON.parse(content);
+
+            var rootNode = new Node();
+            traverse(jsonTmp, rootNode);
+
+
             var parentNode = new Node();
             var parentNode2 = new Node();
             var lines = [
@@ -43,17 +55,6 @@
             for (i = 0; i < parentNode.children.length; i++) {
                 drag(parentNode.children[i], lines);
             }
-            console.log(parentNode);
-
-            //--------------Group 2--------------
-
-            iniChild(3, parentNode2);
-            drag(parentNode2, lines);
-            for (i = 0; i < parentNode2.children.length; i++) {
-                drag(parentNode2.children[i], lines);
-            }
-            console.log(parentNode2);
-
             //-------------Line---------------------
             createLine(lines);
         }, 1500);
