--- a/index.html
+++ b/index.html
@@ -21,41 +21,29 @@
              * Khoi tao cay Node
              * @type Array
              */
-            function traverse(jsonTmp, node) {
+            function traverse(jsonTmp, node, line) {
                 node.id = jsonTmp.name + ""; // fix code later
                 node.path = jsonTmp.name + "";
+                iniParent(node, 60, 60);
+                drag(node, lines);
                 console.log(jsonTmp.name);
                 if (jsonTmp.children.length > 0)
-                for (var i = 0; i < jsonTmp.children.length; i++) {
-                    var child = new Node();
-                    node.children.push(child);
-                    traverse(jsonTmp.children[i], child);
-                }
+                    for (var i = 0; i < jsonTmp.children.length; i++) {
+                        var child = new Node();
+                        node.children.push(child);
+                        traverse(jsonTmp.children[i], child);
+                    }
             }
 
             var content = document.getElementById('main').innerHTML;
             var jsonTmp = JSON.parse(content);
 
-            var rootNode = new Node();
-            traverse(jsonTmp, rootNode);
-
-
-            var parentNode = new Node();
-            var parentNode2 = new Node();
             var lines = [
-                {gayPhuThuoc: parentNode,
-                    biPhuThuoc: parentNode2}
             ];
 
-            iniParent(parentNode, 60, 60);
-            iniParent(parentNode2, 260, 260);
-
-            iniChild(2, parentNode);
-            drag(parentNode, lines);
-            for (i = 0; i < parentNode.children.length; i++) {
-                drag(parentNode.children[i], lines);
-            }
-            //-------------Line---------------------
+            var rootNode = new Node();
+            traverse(jsonTmp, rootNode, lines);
+            
             createLine(lines);
         }, 1500);
     </script>
