--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          * Lay noi dung file json
          * @type type
          */
-        loadFile("jsonForMai2.json");
+        loadFile("json2.json");
         addFileContentToHtml();
         /**
          * Sau 500ms 99% file json da load xong
@@ -31,6 +31,7 @@
             function traverse(jsonTmp, node, lines) {
                 node.id = jsonTmp.name + ""; // fix code later
                 node.path = jsonTmp.name + "";
+                console.log(node);
                 iniRectangleOfNode(node);
                 iniNameOfNode(node);
                 if (jsonTmp.children.length > 0)
