--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             function traverse(jsonTmp, node, lines) {
                 node.id = jsonTmp.name + ""; // fix code later
                 node.path = jsonTmp.name + "";
-                console.log(node);
+//                console.log(node);
                 iniRectangleOfNode(node);
                 iniNameOfNode(node);
                 if (jsonTmp.children.length > 0)
