--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 
     <!-- load the d3.js library -->
     <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="Configuration.js"></script>
+    <script src="config/Configuration.js"></script>
     <script src="Utils.js"></script>
-    <script src="Node.js"></script>
-    <script src="NodeEvent.js"></script>
+    <script src="object/Node.js"></script>
+    <script src="childrenLocation/ChildrenLocation.js"></script>
+    <script src="event/NodeEvent.js"></script>
     <script src="JsonParser.js"></script>
-    <script src="NodeTreeGeneration.js"></script>
+    <script src="tree/NodeTreeGeneration.js"></script>
     <script>
         iniWebPage();
         /**
          * Lay noi dung file json
          * @type type
          */
-        loadStructureFile("json2.json");
-        loadDependencyFile("jsonDependency.json");
+        loadStructureFile("data/json2.json");
+        loadDependencyFile("data/jsonDependency.json");
         /**
          * Sau 500ms 99% file json da load xong
          * @returns {undefined}
