--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="config/Configuration.js"></script>
     <script src="Utils.js"></script>
     <script src="object/Node.js"></script>
+    <script src="searchTree/Search.js"></script>
     <script src="childrenLocation/ChildrenLocation.js"></script>
     <script src="event/NodeEvent.js"></script>
     <script src="JsonParser.js"></script>
