--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- load the d3.js library -->
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="config/Configuration.js"></script>
+    <script src="object/Dependencies.js"></script>
     <script src="Utils.js"></script>
     <script src="object/Node.js"></script>
     <script src="text/TextDisplayer.js"></script>
@@ -75,7 +76,7 @@
             rootNode.rectangle.attr('x', 120).attr('y', 120);
             setTextLocationForAllNode(rootNode);
 
-            createLine(rootNode);
+            createLine(dependencies);
             /**
              * Su dung 1000ms de cho thong tin cau hinh
              * @returns {undefined}
@@ -101,6 +102,5 @@
                 setDoubleClick(rootNode);
             }, 1000);
         }, 300);
-
     </script>
 </body>
