--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="config/Configuration.js"></script>
     <script src="object/Dependencies.js"></script>
     <script src="Utils.js"></script>
+    <script src="event/CollisionHandle.js"></script>
     <script src="object/Node.js"></script>
     <script src="text/TextDisplayer.js"></script>
     <script src="drawLine/DrawLine.js"></script>
