--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 
     <!-- load the d3.js library -->
     <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="config/Configuration.js"></script>
+    <script src="Configuration.js"></script>
     <script src="object/Dependencies.js"></script>
     <script src="Utils.js"></script>
     <script src="event/CollisionHandle.js"></script>
     <script src="object/Node.js"></script>
-    <script src="text/TextDisplayer.js"></script>
-    <script src="drawLine/DrawLine.js"></script>
-    <script src="searchTree/Search.js"></script>
-    <script src="childrenLocation/ChildrenLocation.js"></script>
+    <script src="TextDisplayer.js"></script>
+    <script src="DrawLine.js"></script>
+    <script src="Search.js"></script>
+    <script src="ChildrenLocation.js"></script>
     <script src="event/NodeEvent.js"></script>
     <script src="JsonParser.js"></script>
-    <script src="tree/NodeTreeGeneration.js"></script>
+    <script src="NodeTreeGeneration.js"></script>
     <script>
         iniWebPage();
         /**
