right mouse option

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
          * Lay noi dung file json
          * @type type
          */
-        loadStructureFile("data/json2.json");
-        loadDependencyFile("data/jsonDependency.json");
+        loadStructureFile("data/structure.json");
+        loadDependencyFile("data/dependency.json");
         /**
          * Sau 500ms 99% file json da load xong
          * @returns {undefined}
