update expand strategy

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <script src="object/event/DrawLine.js"></script>
     <script src="object/event/NodeEvent.js"></script>
     <script src="object/event/TextDisplayer.js"></script>
-
+    <script src="object/event/Expand.js" type="text/javascript"></script>
+    
     <script src="tree/ChildrenLocation.js"></script>
     <script src="tree/Search.js"></script>
     <script src="tree/NodeTreeGeneration.js"></script>
