--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 function setEvent(node) {
                     drag(node);
                     doubleClick(node);
-//                    rightMouseCLick(node);
+                    rightMouseCLick(node);
                     for (var i = 0; i < node.children.length; i++)
                         setEvent(node.children[i]);
                 }
