--- a/index.html
+++ b/index.html
@@ -84,9 +84,15 @@
             }
             /**
              * Hien thi 
-             */
+             */            
             setNodeLocation(rootNode, 400, 300);
             setVisible(rootNode);
+            
+            getNameElement(rootNode).style('visibility', 'hidden');
+            getChildContainerElement(rootNode).style('stroke', 'white');
+            getTextContainerElement(rootNode).style('visibility', 'hidden');
+            getStateElement(rootNode).style('visibility', 'hidden');
+            
             calculateLocationOfChildren(rootNode, CHILDREN_DISPLAY_STRATEGY.IN_ROWS);
             rootNode.children.forEach(function (childNode) {
                 setVisible(childNode);
